extract css from js

--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,14 @@
 
 <body>
     <h1 id='title'>hello world</h1>
+    <h1 id='title'>hello world</h1>
     <i class="flaticon-monitor"></i>
     <i class="flaticon-favorites"></i>
     <i class="flaticon-envelope"></i>
     <div class="box box1"></div>
     <div class="box box2"></div>
     <div class="box box3"></div>
-    <img src="../src/images/angular.jpg" alt="angular">
+    <img src="../src/assets/images/angular.jpg" alt="angular">
 </body>
 
 </html>
