--- a/test3/public/index.html
+++ b/test3/public/index.html
@@ -10,12 +10,13 @@
 <body>
     <!-- this is a comment -->
     <div class="container">
-        <h1>This is test 2</h1>
+        <h1>This is test 3</h1>
         <i class="flaticon-monitor"></i>
         <i class="flaticon-favorites"></i>
         <i class="flaticon-envelope"></i>
         <div class="box box1"></div>
         <div class="box box2"></div>
+        <button id='btn'>Lazy</button>
     </div>
 </body>
 
